<resources>
    <string name="app_name">Yups</string>

    <string name="email">Email</string>
    <string name="pwd">Contraseña</string>
    <string name="login">Log in</string>
    <string name="create">Crear usuario</string>

    <string name="pwd2">Confirmar contraseña</string>
    <string name="username">Nombre de usuario</string>
    <string name="name">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="tlf">Numero de telefono</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
