<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewUserActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="111dp"
        android:layout_height="99dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext_style"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textColorHint="#0C0B0B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext_style"
        android:ems="10"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textColorHint="#0C0B0B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_pwd2"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext_style"
        android:ems="10"
        android:hint="@string/pwd2"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textColorHint="#0C0B0B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pwd" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext_style"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textColorHint="#0C0B0B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pwd2" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext_style"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textColorHint="#0C0B0B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <EditText
        android:id="@+id/et_apellidos"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext_style"
        android:ems="10"
        android:hint="@string/apellidos"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textColorHint="#0C0B0B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <EditText
        android:id="@+id/et_tlf"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext_style"
        android:ems="10"
        android:hint="@string/tlf"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textColorHint="#0C0B0B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_apellidos" />

    <ImageButton
        android:id="@+id/btn_exit"
        android:layout_width="63dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:background="@color/colornone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_tlf"
        app:srcCompat="@drawable/button_exit" />

    <Button
        android:id="@+id/btn_create_new"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="16dp"
        android:textStyle="bold|italic"
        android:text="@string/create"
        android:background="@drawable/button_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_tlf" />

</androidx.constraintlayout.widget.ConstraintLayout>